<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calculator!</string>
    <string name="display_name">Calculator</string>
    <string name="number1">Enter number1</string>
    <string name="number2">Enter number2</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">*</string>
    <string name="Modulus">%</string>
    <string name="divide">/</string>
</resources>