<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:textColor="#FF5722"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/number1_editText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/number1"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/number2_edittext"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/number2"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlHardcoded,TextFields" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addition_btn"
            android:background="#EF3F08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/addition"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:background="@color/purple_200"
            android:id="@+id/substraction_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/substraction"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:background="@color/teal_700"
            android:id="@+id/multiplication_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/multiplication"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:background="#0829E3"
            android:id="@+id/divide_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/divide"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/modulus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/teal_200"
            android:text="@string/Modulus"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />

    </LinearLayout>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        tools:ignore="RtlHardcoded" />

</LinearLayout>